--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header class="header">
         <nav class="nav">
             <a href="#" class="logopagina">Dharma indumentaria</a>
+            <label for="toggle-menu"><i class="fas fa-bars"></i> </label>
+            <input type="checkbox" id="toggle-menu">
             <ul class="navmenu">
                 <li class="navmenuitem"><a href="#" class="navlink">Inicio</a></li>
                 <li class="navmenuitem"><a href="#" class="navlink">Catalogo</a></li>
@@ -47,7 +53,40 @@
                 </p>
             </div>
         </section>
+        <div class="topcard">
+            <h1> Por qué elegir dharma indumentaria? </h1>
+        </div>
+        <div class="container">
+
+            <div class="leftcolumn">
+                <h4>Tenemos atencion de calidad con nuestros clientes</h4>
+            </div>
+            <div class="centercolumn">
+                <h4>Hacemos envios a todo el pais a un costo muy bajo</h4>
+            </div>
+
+            <div class="rightcolumn">
+                <h4>Nuestra calidad de productos es muy buena y contamos con distintos medios de pago</h4>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <div>
+            <h3>Nuestra ubicacion</h3>
+            <h4>Crucero General Belgrano esquina Puerto Argentino, Cortaderas.</h4>
+            <h5>Tel:1176445638</h5>
+            <main class="logo_footer">
+                <div class="logoig">
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <div class="logofb">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+
+                </div>
+            </main>
+        </div>
+    </footer>
 </body>
 
 </html>
